--- a/view.html
+++ b/view.html
@@ -4,6 +4,14 @@
 </head>
 
 <style>
+    * {
+        user-select: none; /* supported by Chrome and Opera */
+        -webkit-user-select: none; /* Safari */
+        -khtml-user-select: none; /* Konqueror HTML */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+    }
+    
     img{
         width: 100%;
         height: 100%;
