--- a/view.html
+++ b/view.html
@@ -11,7 +11,7 @@
         -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
     }
-    
+
     img{
         width: 100%;
         height: 100%;
@@ -41,7 +41,7 @@
     }
 </style>
 
-<body>
+<body id="body">
     <img id="view1">
     <div id="switch-left"></div>
     <div id="switch-right"></div>
@@ -82,6 +82,31 @@
         }
         showImage(imageid);
     }
-    
+
+    document.onkeydown = checkKey;
+
+function checkKey(e) {
+
+    e = e || window.event;
+    if (e.keyCode == '37') {
+        if(imageid == 0){
+            imageid = imageData.length - 1;
+        }
+        else{
+            imageid--;
+        }
+        showImage(imageid);
+    }
+    else if (e.keyCode == '39') {
+        if(imageid == imageData.length - 1){
+            imageid = 0;
+        }
+        else{
+            imageid++;
+        }
+        showImage(imageid);
+    }
+
+}
 
 </script>
